--- a/index.html
+++ b/index.html
@@ -1,64 +1,82 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8" />
 	<style type="text/css">
-		html, body {
+		html,
+		body {
 			margin: 0;
 			padding: 0;
 		}
+		
 		.box {
 			border: 1pt solid;
 			margin: 1em;
 		}
-		.title, .content {
+		
+		.title,
+		.content {
 			padding: 0.1em 0.2em;
 		}
-    .topbar {
-      background: #fff;
-      width: 100%;
-      height: 45pt;
-      margin: 0;
-      padding: 0.3em;
-      position: fixed;
-      top: 0px;
-      border-bottom: 1px solid;
-    }
-    .tablink {
-      position: fixed;
-      text-align: right;
-      top: 0.3em;
-      right: 1.3em;
-    }
-    #list {
-      position: relative;
-      top: 45pt;
-    }
-    		.tbl {
+		
+		.topbar {
+			background: #fff;
+			width: 100%;
+			height: 45pt;
+			margin: 0;
+			padding: 0.3em;
+			position: fixed;
+			top: 0px;
+			border-bottom: 1px solid;
+		}
+		
+		.tablink {
+			position: fixed;
+			text-align: right;
+			top: 0.3em;
+			right: 1.3em;
+		}
+		
+		#list {
+			position: relative;
+			top: 45pt;
+		}
+		
+		.tbl {
 			display: table;
 		}
+		
 		.tblRow {
 			display: table-row;
 		}
-		.content, .comment {
+		
+		.content,
+		.comment {
 			display: table-cell;
 			padding: 0.3em;
 		}
+		
 		.comment {
 			width: 1%;
 		}
+		
 		.tbl {
 			width: 100%;
 			border-top: 1px solid;
 		}
+		
 		.title {
 			cursor: pointer;
 			background: #eee;
 		}
+		
 		.title:hover {
 			background: #ffe;
 		}
-		.filter, .invisible {
+		
+		.filter,
+		.invisible {
 			display: none;
 		}
 	</style>
@@ -121,14 +139,16 @@
 			titleDiv.addEventListener('click', toggleBox, false);
 		}
 		function toggleBox(e) {
+			alert('toggle')
 			var box = e.target.parentNode.getElementsByClassName('tbl')[0];
 			box.classList.toggle('invisible');
 		}
-		applyFilterTimeouts = [];
+		//applyFilterTimeouts = [];
 		function applyFilterTrigger() {
-			while (applyFilterTimeouts.length > 0)
-				clearTimeout(applyFilterTimeouts.shift());
-			applyFilterTimeouts.push(setTimeout(applyFilter, 1000));
+			applyFilter();
+			//while (applyFilterTimeouts.length > 0)
+			//	clearTimeout(applyFilterTimeouts.shift());
+			//applyFilterTimeouts.push(setTimeout(applyFilter, 1000));
 		}
 		function inputDisable(input, bDisable) {
 			input.disabled = bDisable;
@@ -140,11 +160,11 @@
 		}
 		applyFilterRunning = false;
 		function applyFilter() {
-			if (applyFilterRunning) return;
-			indicateProgress(true);
-			applyFilterRunning = true;
-			while (applyFilterTimeouts.length > 0)
-				clearTimeout(applyFilterTimeouts.shift());
+			//if (applyFilterRunning) return;
+			//indicateProgress(true);
+			//applyFilterRunning = true;
+			//while (applyFilterTimeouts.length > 0)
+				//clearTimeout(applyFilterTimeouts.shift());
 			var textAll = filterAllInput.value;
 			var textTitle = filterTitleInput.value;
 			var textContent = filterContentInput.value;
@@ -193,13 +213,14 @@
 				if (names.length > 0) {
 					setTimeout(compute, 1);
 				} else {
-					applyFilterRunning = false;
-					indicateProgress(false);
+				//	applyFilterRunning = false;
+				//	indicateProgress(false);
 					console.log("Filter applied");
 				}
 			}
 			compute();
 		}
+
 		function init() {
 			contentView = document.getElementById('list');
 			filterAllInput = document.getElementById('filterAll');
@@ -249,19 +270,22 @@
 		window.addEventListener('load', init, false);
 	</script>
 </head>
+
 <body>
 	<div id="list">
 	</div>
-  <div class="topbar">
-  	Use space as separator for multiple required substrings.
-	<div style="height:3px"></div>
-  	All: <input id="filterAll" autocomplete="off" /> Title: <input id="filterTitle" autocomplete="off" /> Content: <input id="filterContent" autocomplete="off" /><br/>
-	<div style="height:3px"></div>
-  	Click an entry's titlebar to view details.
-  </div>
-  <div class="tablink">
-    <a href="index.html" target="_blank">New Tab</a><br/>
-    <a href="https://gitweb.gentoo.org/proj/hardened-refpolicy.git" target="_blank">Policy Sources</a>
-  </div>
+	<div class="topbar">
+		Use space as separator for multiple required substrings.
+		<div style="height:3px"></div>
+		All: <input id="filterAll" autocomplete="off" /> Title: <input id="filterTitle" autocomplete="off" /> Content: <input id="filterContent"
+			autocomplete="off" /><br/>
+		<div style="height:3px"></div>
+		Click an entry's titlebar to view details.
+	</div>
+	<div class="tablink">
+		<a href="index.html" target="_blank">New Tab</a><br/>
+		<a href="https://gitweb.gentoo.org/proj/hardened-refpolicy.git" target="_blank">Policy Sources</a>
+	</div>
 </body>
+
 </html>
